// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adds a comment to UNSAFE_className 1`] = `
"import { Button } from "@react-spectrum/rainbow";

<Button // TODO: check this UNSAFE_className
UNSAFE_className="hi">
  Test
</Button>"
`;

exports[`Adds a comment when a spread is used 1`] = `
"import { Button } from "@react-spectrum/rainbow";
import { style } from "@react-spectrum/rainbow/style-macro/spectrum-theme" with { type: "macro" };

<Button
  // TODO: check this spread for style props
  {...otherProps}
  css={style({
    marginX: 4
  })()}>Test</Button>"
`;

exports[`Adds a comment when a variable is used 1`] = `
"import { Button } from "@react-spectrum/rainbow";

<Button // TODO: update this style prop
marginX={margin}>Test</Button>"
`;

exports[`Bails on UNSAFE_style if it contains a spread 1`] = `
"<div
  // TODO: check this UNSAFE_style
  UNSAFE_style={{
    color: 'var(--spectrum-gray-900)',
    ...otherStyles
  }}>
  Test
</div>"
`;

exports[`Converts UNSAFE_className to className on View 1`] = `
"<div className="hi">
  Test
</div>"
`;

exports[`Handles Flex 1`] = `
"import { style } from "@react-spectrum/rainbow/style-macro/spectrum-theme" with { type: "macro" };

<div
  className={style({
    display: "flex",
    flexDirection: "column",
    alignItems: "center",
    gap: 4,
    flexWrap: "wrap"
  })()}>Test</div>"
`;

exports[`Handles Grid 1`] = `
"import { style } from "@react-spectrum/rainbow/style-macro/spectrum-theme" with { type: "macro" };

<div
  className={style({
    display: "grid",
    gridTemplateAreas: ["header  header", "sidebar content", "footer  footer"],
    gridTemplateColumns: ["1fr", "3fr"],
    gridTemplateRows: [20, "auto", 20],
    height: "[480px]",
    gap: 2
  })()}>
  Test
</div>"
`;

exports[`Handles UNSAFE_style 1`] = `
"import { style } from "@react-spectrum/rainbow/style-macro/spectrum-theme" with { type: "macro" };

<div
  className={style({
    color: {
      default: "gray-900",
      isErrorState: "red-900"
    },

    borderWidth: {
      default: 2,

      border: {
        thin: 1
      }
    },

    borderRadius: {
      default: "none",
      isRounded: "default"
    },

    display: "flex",
    gap: 4,
    fontSize: "base",
    fontWeight: "bold",
    gridTemplateAreas: ["foo bar", "baz qux"],
    transitionDuration: 160
  })({
    isErrorState,
    border,
    isRounded: isRounded(props)
  })}>
  Test
</div>"
`;

exports[`Handles View 1`] = `
"import { style } from "@react-spectrum/rainbow/style-macro/spectrum-theme" with { type: "macro" };

<div
  className={style({
    borderWidth: 1,
    borderColor: "gray-400",
    borderRadius: "lg",
    padding: 5,

    backgroundColor: {
      default: "blue-1000",
      dark: "blue-900"
    },

    flex: 1
  })()}>
  Test
</div>"
`;

exports[`Handles View colorVersion={5} 1`] = `
"import { style } from "@react-spectrum/rainbow/style-macro/spectrum-theme" with { type: "macro" };

<div
  className={style({
    borderWidth: 1,
    borderColor: "gray-200",
    borderRadius: "lg",
    padding: 5,

    backgroundColor: {
      default: "blue-1000",
      dark: "blue-900"
    }
  })()}>
  Test
</div>"
`;

exports[`Handles View colorVersion={6} 1`] = `
"import { style } from "@react-spectrum/rainbow/style-macro/spectrum-theme" with { type: "macro" };

<div
  className={style({
    borderWidth: 1,
    borderColor: "gray-200",
    borderRadius: "lg",
    padding: 5,
    backgroundColor: "blue-600"
  })()}>
  Test
</div>"
`;

exports[`Handles dimensions 1`] = `
"import { Button } from "@react-spectrum/rainbow";
import { style } from "@react-spectrum/rainbow/style-macro/spectrum-theme" with { type: "macro" };

<Button
  css={style({
    marginX: 4,
    marginY: 5,
    width: "full"
  })()}>Test</Button>"
`;

exports[`Handles renamed components 1`] = `
"import { Button as RSPButton } from "@react-spectrum/rainbow";
import { style } from "@react-spectrum/rainbow/style-macro/spectrum-theme" with { type: "macro" };

<RSPButton
  css={style({
    marginX: 4,
    marginY: 5,
    width: "full"
  })()}>Test</RSPButton>"
`;

exports[`Handles responsive style props 1`] = `
"import { TextField } from "@react-spectrum/rainbow";
import { style } from "@react-spectrum/rainbow/style-macro/spectrum-theme" with { type: "macro" };

<TextField label="Name" css={style({
  width: {
    default: 40,
    lg: "[400px]"
  }
})()} />"
`;

exports[`Handles responsive style props 2`] = `
"import { TextField } from "@react-spectrum/rainbow";
import { style } from "@react-spectrum/rainbow/style-macro/spectrum-theme" with { type: "macro" };

<TextField label="Name" css={style({
  width: {
    default: 40,
    lg: "[400px]"
  }
})()} />"
`;

exports[`Merges UNSAFE_className with macro className 1`] = `
"import { style } from "@react-spectrum/rainbow/style-macro/spectrum-theme" with { type: "macro" };

<div
  className={"hi" + style({
    marginX: 4
  })()}>
  Test
</div>"
`;
